Fix tab button on mobile

--- a/src/app/components/modules/sticky-sidebar/presenters/sticky-sidebar-small-pres/sticky-sidebar-small-pres.component.scss
+++ b/src/app/components/modules/sticky-sidebar/presenters/sticky-sidebar-small-pres/sticky-sidebar-small-pres.component.scss
@@ -27,8 +27,6 @@ $tab-min-width: 72px !default;
 }
 
 .mat-tab-nav-bar {
-  overflow-x: scroll;
-
   ::ng-deep .mat-tab-links {
     justify-content: center;
   }
